13806 dladm: variable may be used uninitialized Reviewed by: Robert Mustacchi <rm+illumos@fingolfin.org> Approved by: Rich Lowe <richlowe@richlowe.net>